[feature][Sondage] Création des classes pour les sondages

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>accessing-data-jpa</artifactId>
+    <artifactId>Pain_Kill</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>accessing-data-jpa</name>
+    <name>Pain_Kill</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
