--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/PainKill
 spring.datasource.username=postgres
-spring.datasource.password=2Gh3tt097218*
+spring.datasource.password=postgres
 
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
