liaison des branches

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=9090
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/PainKill
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=2Gh3tt097218*
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
 
